global-ingress/ingress/monitoring-ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitoring-routes
  namespace: monitoring
spec:
  entryPoints:
    - websecure # HTTPS
  routes:
    # Grafana
    - match: Host(`tickget.kr`) && PathPrefix(`/grafana`)
      kind: Rule
      priority: 20  # 높은 우선순위
      services:
        - name: monitoring-grafana
          port: 80
          namespace: monitoring

    # Prometheus
    - match: Host(`tickget.kr`) && PathPrefix(`/prometheus`)
      kind: Rule
      priority: 20
      services:
        - name: monitoring-kube-prometheus-prometheus
          port: 9090
          namespace: monitoring

    # Alertmanager
    - match: Host(`tickget.kr`) && PathPrefix(`/alertmanager`)
      kind: Rule
      priority: 20
      services:
        - name: monitoring-kube-prometheus-alertmanager
          port: 9093
          namespace: monitoring

    # Kafka UI
    - match: Host(`tickget.kr`) && PathPrefix(`/kafka`)
      kind: Rule
      priority: 20
      middlewares:
        - name: kafka-ui-stripprefix # 1번 파일에서 생성한 Middleware
          namespace: monitoring
      services:
        - name: kafka-ui-service # 1번 파일에서 생성한 Service
          port: 80
          namespace: monitoring

  # TLS 설정
  tls:
    secretName: tickget-kr-tls
    domains:
      - main: tickget.kr
