global-ingress/ingress/traefik-api-route.yaml
# Traefik API 라우트 (/api/* - Traefik API로)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-api-route
  namespace: kube-system
spec:
  entryPoints:
    - websecure # web -> websecure
  routes:
  - match: Host(`tickget.kr`) && PathPrefix(`/k3s/traefik-api`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
  # --- TLS 설정 ---
  tls:
    secretName: tickget-kr-tls # ingress.yaml에서 생성된 Secret (네임스페이스/이름)
    # default 네임스페이스에 생성되었으므로 'default/tickget-kr-tls'로 지정
