global-ingress/ingress/traefik-dashboard-ingress.yaml
# Traefik Dashboard UI 라우트
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
spec:
  entryPoints:
    - websecure # web -> websecure (https를 위해)
  routes:
  - match: Host(`tickget.kr`) && PathPrefix(`/k3s/traefik`)
    kind: Rule
    middlewares:
      - name: traefik-dashboard-middleware
    services:
    - name: api@internal
      kind: TraefikService
  # --- TLS 설정 ---
  tls:
    secretName: tickget-kr-tls # ingress.yaml에서 생성된 Secret (네임스페이스/이름)
    # default 네임스페이스에 생성되었으므로 'default/tickget-kr-tls'로 지정
    namespace: kube-system
